# TestAndroid

app/: CMakeLists.txt  build.gradle
app/release/: app-release.apk  output.json
app/src/androidTest/java/com/example/testandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_example_testandroid_MainActivity.h  native-lib.cpp
app/src/main/java/com/example/testandroid/: MainActivity.java
app/src/main/res/layout/: main_layout.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
